tests/paczka1/small_fuzzy/39411236.err
Error in line 6: z0Z A35 76,2
Error in line 4: ZOIinBhx S895 67,4
Error in line 11: xXvfHI A97 47,7
Error in line 12: VV0QH A97 66,1
